2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in: Linking libgcc as shared.
	* sysdeps/bid/libdfp.abilist: New file: BID abilist.
	* sysdeps/soft-dfp/libdfp-test-ulps: Add software implementation
	ULP file.
	* sysdeps/bid/decode.c: New file: functional BID implementation.
	* sysdeps/soft-dfp/bid/numdigits.h (getexpd32): Add funcional
	implementation.
	(getexpd64): Likewise.
	(getexpd128): Likewise.
	(setexpd32): Likewise.
	(setexpd64): Likewise.
	(setexpd128): Likewise.
	(numdigitsd32): Likewise.
	(numdigitsd64): Likewise.
	(numdigitsd128): Likewise.
	(setdigitsd32): Likewise.
	(setdigitsd64): Likewise.
	(setdigitsd128): Likewise.
	(left_justifyd32): Likewise.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* decode.c: Remove file.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_32): Use
	__builtin_clz if possible.
	(bid_required_bits_64): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-left_justify.c: Cleanup.
	* tests/test-decode.c: Add _Decimal64 and _Decimal128 tests and some
	cleanup.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.gdb: Remove file.
	* Makefile.in: Remove GDB auxiliary rule to create GDB scripts for
	each test.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/islessgreaterd32.c (islessgreater): clean ups implementation
	to use only libdecnumber operations.
	* ieee754r/isgreaterd32.c (isgreater): Likewise.
	* ieee754r/isgreaterequald32.c (isgreaterequal): Likewise.
	* ieee754r/islessequald32.c (islessequal): Likewise.
	* ieee754r/islessd32.c (isless): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_32: Fix lookup
	table values.
	(bid_required_bits_64): Use bid_required_bits_32 instead.